Update 'python-xxsbextu' component image to: quay.io/tsscui/python-xxsbextu:5931a08c955aca2f35b89b34029393f9cd832d72@sha256:edbf2dabbca8e829522de5edce9b4376801f8fd50eb233afd7519cabeaf391be

--- a/components/python-xxsbextu/overlays/development/deployment-patch.yaml
+++ b/components/python-xxsbextu/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: python-xxsbextu
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/tsscui/python-xxsbextu:5931a08c955aca2f35b89b34029393f9cd832d72@sha256:edbf2dabbca8e829522de5edce9b4376801f8fd50eb233afd7519cabeaf391be
+          name: container-image
